# org-handbook-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  genapidoc.sh  getversion.py  main.py  noxfile.py  orghandbookapi.toml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  python-package.yml
alembic/: env.py
docs/: conf.py  index.rst  orghandbookapi.database.models.rst  orghandbookapi.database.rst  orghandbookapi.routers.rst  orghandbookapi.routers.v1.rst  orghandbookapi.rst  orghandbookapi.schemas.rst
orghandbookapi/: app.py  config_loader.py  dependencies.py  loader.py
orghandbookapi/database/: database.py
orghandbookapi/database/models/: __init__.py  activity.py  base.py  building.py  organization.py  repositories.py
orghandbookapi/routers/: __init__.py
orghandbookapi/routers/v1/: __init__.py  activity.py  building.py  organization.py
orghandbookapi/schemas/: __init__.py  activity.py  building.py  organization.py
